# junkyard

klikinsäästäjä/: README.md  klikinsäästäjä.py  lc.py  pyproject.toml  test.py  wp.py
klikinsäästäjä/src/klikinsaastaja_ng/: bot.py  main.py  models.py  outlet.py  settings.py  ui.py  utils.py
klikinsäästäjä/src/klikinsaastaja_ng/data/: article_title_prompt.txt.j2  vested_groups_prompt.txt.j2
klikinsäästäjä/src/klikinsaastaja_ng/outlets/: iltalehti.py
